handling exceptions and showing pop ups with errors